@@ -1,5 +1,17 @@
+
+def currentOS = OperatingSystem.current()
+def platform
+if (currentOS.isWindows()) {
+    platform = 'win'
+} else if (currentOS.isLinux()) {
+    platform = 'linux'
+} else if (currentOS.isMacOsX()) {
+    platform = 'mac'
+}
+
 apply plugin: 'java'
 apply plugin: 'idea'
+
 subprojects {
     apply plugin: 'java'
 }
@@ -50,6 +62,54 @@ project(':client') {
             }
         }
     }
+    
+    repositories {
+        mavenCentral()
+    }
+    plugins {
+  id 'application'
+  id 'org.openjfx.javafxplugin' version '0.0.8'
+  id 'org.beryx.jlink' version '2.15.1'}
+      
+    dependencies {
+       
+        implementation "org.openjfx:javafx-base:11:${platform}"
+    implementation "org.openjfx:javafx-graphics:11:${platform}"
+    implementation "org.openjfx:javafx-controls:11:${platform}"
+    implementation "org.openjfx:javafx-fxml:11:${platform}"
+    compile group: 'com.jfoenix', name: 'jfoenix', version: '9.0.9'
+    }
+    dependencies {
+    implementation group: 'com.jfoenix', name: 'jfoenix', version: '9.0.9'
+}
+
+javafx {
+    version = "13"
+    modules = [ 'javafx.controls', 'javafx.fxml' ]
+}
+
+run {
+    jvmArgs = [
+            "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix",
+            "--add-exports=javafx.controls/com.sun.javafx.scene.control=com.jfoenix",
+            "--add-exports=javafx.base/com.sun.javafx.binding=com.jfoenix",
+            "--add-exports=javafx.graphics/com.sun.javafx.stage=com.jfoenix",
+            "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix",
+    ]
+}
+
+jlink {
+    launcher {
+        name = 'hellofx'
+        jvmArgs = [
+                "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix",
+                "--add-exports=javafx.controls/com.sun.javafx.scene.control=com.jfoenix",
+                "--add-exports=javafx.base/com.sun.javafx.binding=com.jfoenix",
+                "--add-exports=javafx.graphics/com.sun.javafx.stage=com.jfoenix",
+                "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix",
+        ]
+    }
+}
 
     repositories {
         mavenCentral()
